--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -30,23 +30,18 @@ http {
         }
     }
 
-    # http-сервер на 8081 порту всегда возвращает строку "8081"
-    server {
-        listen       8081;
-
-        location / {
-            return 200 '8081';
-            add_header Content-Type text/plain;
-        }
+    upstream events{
+        server localhost:5003;
+        server localhost:5004;
     }
 
-    # http-сервер на 8082 порту всегда возвращает строку "8082"
+    # 8080 порт - точка входа для пользователей
     server {
-        listen       8082;
+        listen       8081;
+        server_name  localhost;
 
         location / {
-            return 200 '8082';
-            add_header Content-Type text/plain;
+		proxy_pass http://events;
         }
     }
 }
