сделал пятую лабу

--- a/Valuator/appsettings.json
+++ b/Valuator/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "Nats": "127.0.0.1:4222",
+    "db_rus": "127.0.0.1:6000",
+    "db_eu": "127.0.0.1:6001",
+    "db_other": "127.0.0.1:6002",
+    "db_segmenter": "127.0.0.1:6003"
+  },
   "AllowedHosts": "*"
 }
